# hackIT_ng

./: .env  .gitignore  README.md  dev.docker-compose.yml  docker-compose.yml
hackIT/: .env  .env.example  Cargo.toml  Dockerfile  Rocket.toml
hackIT/migrations/2020-08-05-195710_create_records/: down.sql  up.sql
hackIT/src/: challenge.rs  db.rs  main.rs  model.rs  schema.rs
hackIT/static/: index.html  styles.css
hackIT/templates/: challenges.html.tera  index.html.tera  records.html.tera
hackIT/test_challenges/hello/: info.toml
hackIT/test_challenges/whaa/: 1.q  info.toml
hackIT_db/: init.sql
templates/: index.html
