[package]
name = "hack-it"
version = "0.1.0"
authors = ["Joakim Anderlind <joakimanderlind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"


# For challenge-parser
toml = "0.5.3"
serde = {version = "1.0", features = ["derive"]}
