[package]
name = "hack-it"
version = "0.1.0"
authors = ["Joakim Anderlind <joakimanderlind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "3.1.1"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
syn = "1.0.38"

# For challenge-parser
toml = "0.5.3"
tera = "1.4"


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool","tera_templates"]

